# autocross

./: .Rbuildignore  .Rhistory  .gitignore  CMakeLists.txt  DESCRIPTION  DYE-3maincore_water_isotopes.tab  DYE-3shallowcore18C_water_isotopes.tab  GICC05_time_scale.tab  LICENSE  LICENSE.md  Makefile  NGRIP2_layer_types.txt  SW_Greenland1840.txt  ToDo.txt  autocross.Rproj  build.autocross.R  build.autocross1.R  comparison.txt  compile.sh  create_package.R  dummy.f90  estimate_CI.R  lakes.txt  lesa_gogn.R  makefile_w  plot_d18_t.R  profa_mts.R  prufa.R  prufa.f90  pt3.f90  punktar.txt  read_data.R  redfit-x.cfg  renland.csv  resampling.R  run.autocross.R  ss.f90  sst-grimsey.txt  summary.txt  t4-method.md  (+5 more)
R/: estimate_CI.R  spectrum.R
autocross/: .Rbuildignore  DESCRIPTION  NAMESPACE  autocross.Rproj  codex-config.txt
autocross/R/: cross_spectrum.R  estimate_CI.R  resampling.R  spectrum.R  utilities.R  utils.R
autocross/dev/: fill_arrays  fill_arrays.f90  meson.build  simpletest.R
autocross/inst/data/: test_data.txt
autocross/man/: estimate_CI.Rd  spectrum.Rd
autocross/src/: Makevars  common_modules.f90  init.c  p3_modules.f90  p3_subroutine.f90  p4_subroutine.f90  rx_modules.f90  rx_subroutine.f90
doc/: lestumig.rtf  lestumig.txt
double/: nrtype.f90  nrutil.f90
examples/sst/: pearsonT3-table.R  plot-sst.py
examples/sst/data/: Grindavík.txt  Hraun-á-Skaga.txt  Papey.txt  Stykkishólmur.txt  station-list.txt  Þorvaldsstaðir.txt
grímsey/: grimsey.xlsx  grimsey_annual.txt  is-sjavarhiti-ofl.txt  plot_grimsey_ann.R  sjavarhitamedaltol_manudir.xlsx
orig/REDFIT-X-submission/: readme.txt
orig/REDFIT-X-submission/example/: REDFIT-X-result.cxy  REDFIT-X-result.gxx  REDFIT-X-result.gxy  REDFIT-X-result.gyy  REDFIT-X-result.phxy
orig/REDFIT-X-submission/src/: redfit-x -original.f90  redfit-x.f90
orig/nr/: airy.f90  amebsa.f90  amoeba.f90  anneal.f90  arcmak.f90  arcode.f90  asolve.f90  atimes.f90  badluk.f90  balanc.f90  banbks.f90  bandec.f90  banmul.f90  bcucof.f90  bcuint.f90  beschb.f90  bessi.f90  bessi0.f90  bessi1.f90  bessik.f90  bessj.f90  bessj0.f90  bessj1.f90  bessjy.f90  bessk.f90  bessk0.f90  bessk1.f90  bessy.f90  bessy0.f90  bessy1.f90  beta.f90  betacf.f90  betai.f90  bico.f90  bnldev.f90  brent.f90  broydn.f90  broydn.for  bsstep.f90  caldat.f90  (+310 more)
orig/pearsont3/: 1.tmp  2.tmp  ALF_STC.txt  compile.bat  inv_tlambda.mod  nr.mod  nrtype.mod  own_interfaces.mod  pearsont3.f90  ran.f90.~1~  resample_data.mod  setting.mod
orig/pearsont3/objs/: data1.mod  inv_student.mod  inv_tlambda.mod  nrutil.mod  parameters.mod  resample_data.mod  result1.mod
osnap/: get-osnap.py  osnap-east.txt  osnap.ipynb  osnap.nc
pearsont3/: avevar.f90  nr.f90  pearsont3.f90  ran.f90
specfun/: as239.f90  dlasrt.f90  f77_to_f90.f90  lsame.f  lsame.f90  meanvar.f90  newbrent.f90  plotgamma.m  random_number.f90  readme  sort.f90  testbrent.f90  testerfc.f90  testgamma.f90  testmeanvar.f90  testsort.f90
src/: common_modules.f90  modules.f90  p3_modules.f90  p3_subroutine.f90  pearsont3.f90  pearsont3mod.f90  pearsont3sub_mod.f90  prufa.f90  prufa1.f90  redfit-x.f90  redfitx.f90  rx_modules.f90  rx_subroutine.f90
sst/: extract_sst.py  plot-sst.py  station-list.txt
sst/data/: Grímsey.txt  Raufarhöfn.txt  Reykjavík.txt  Strandir.txt  Stórhöfði.txt  Suðureyri.txt  Teigarhorn.txt  station-list.txt
